syntax = "proto3";

package api.videoChat.service.v1;

option go_package = "lehu-video/api/videoChat/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.videoChat.service.v1";

import "api/videoChat/service/v1/base.proto";


// =======================
// 消息相关服务
// =======================
service MessageService {

  // 发送消息（会自动创建/获取会话）
  rpc SendMessage(SendMessageReq) returns (SendMessageResp);

  // 获取消息列表
  rpc ListMessages(ListMessagesReq) returns (ListMessagesResp);

  // 撤回消息
  rpc RecallMessage(RecallMessageReq) returns (RecallMessageResp);

  // 标记消息已读
  rpc MarkMessagesRead(MarkMessagesReadReq) returns (MarkMessagesReadResp);

  // 获取未读消息数量
  rpc GetUnreadCount(GetUnreadCountReq) returns (GetUnreadCountResp);

  // 获取会话列表（核心入口）
  rpc ListConversations(ListConversationsReq) returns (ListConversationsResp);

  // 删除会话（仅对自己不可见）
  rpc DeleteConversation(DeleteConversationReq) returns (DeleteConversationResp);

  // 获取会话详情（单聊 / 群聊）
  rpc GetConversation(GetConversationReq) returns (GetConversationResp);

  // 清空聊天记录
  rpc ClearMessages(ClearMessagesReq) returns (ClearMessagesResp);

  // 更新消息状态
  rpc UpdateMessageStatus(UpdateMessageStatusReq) returns (UpdateMessageStatusResp);

  // 获取单条消息
  rpc GetMessage(GetMessageReq) returns (GetMessageResp);

  // 创建会话（如果需要）
  rpc CreateConversation(CreateConversationReq) returns (CreateConversationResp);


}


// =======================
// 枚举定义
// =======================

// 会话类型
enum ConversationType {
  SINGLE = 0;  // 单聊
  GROUP  = 1;  // 群聊
}

// 消息类型
enum MessageType {
  TEXT   = 0;
  IMAGE  = 1;
  VOICE  = 2;
  VIDEO  = 3;
  FILE   = 4;
  SYSTEM = 99;
}

// 消息状态
enum MessageStatus {
  SENDING   = 0;
  SENT      = 1;
  DELIVERED = 2;
  READ      = 3;
  RECALLED  = 4;
  FAILED    = 99;
}


// =======================
// 消息模型
// =======================

message MessageContent {
  string text = 1;

  string image_url = 2;
  int64 image_width = 3;
  int64 image_height = 4;

  string voice_url = 5;
  int64 voice_duration = 6;

  string video_url = 7;
  string video_cover = 8;
  int64 video_duration = 9;

  string file_url = 10;
  string file_name = 11;
  int64 file_size = 12;

  string extra = 13;
}

message Message {
  int64 id = 1;
  int64 conversation_id = 2;

  int64 sender_id = 3;
  int64 receiver_id = 4; // 用户ID 或 群ID

  ConversationType conv_type = 5;
  MessageType msg_type = 6;

  MessageContent content = 7;
  MessageStatus status = 8;
  bool is_recalled = 9;

  string created_at = 10;
  string updated_at = 11;
}


// =======================
// 会话模型（纯“会话态”）
// =======================

message Conversation {
  int64 id = 1;
  ConversationType type = 2;

  optional int64 target_id = 3; // 单聊对方
  optional int64 group_id = 4;  // 群聊ID

  string name = 5;
  string avatar = 6;

  string last_message = 7;
  optional MessageType last_msg_type = 8;
  optional int64 last_msg_time = 9;

  int64 member_count = 10;

  string created_at = 11;
  string updated_at = 12;
}


// =======================
// 会话“视图模型”（给客户端用）
// =======================

message ConversationView {
  Conversation conversation = 1;

  int64 unread_count = 2;
  bool is_pinned = 3;
  bool is_muted = 4;
}


// =======================
// RPC 请求 / 响应
// =======================

// 发送消息
message SendMessageReq {
  int64 sender_id = 1;
  int64 receiver_id = 2;
  ConversationType conv_type = 3;

  MessageType msg_type = 4;
  MessageContent content = 5;

  string client_msg_id = 6; // 客户端幂等
}

message SendMessageResp {
  int64 message_id = 1;
  int64 conversation_id = 2;
  Metadata meta = 3;
}


// 获取消息列表
message ListMessagesReq {
  int64 user_id = 1;
  int64 conversation_id = 2;

  int64 last_msg_id = 3;
  int32 limit = 4;
}

message ListMessagesResp {
  repeated Message messages = 1;
  bool has_more = 2;
  int64 last_msg_id = 3;
  Metadata meta = 4;
}


// 撤回消息
message RecallMessageReq {
  int64 message_id = 1;
  int64 user_id = 2;
}

message RecallMessageResp {
  Metadata meta = 1;
}


// 标记已读
message MarkMessagesReadReq {
  int64 user_id = 1;
  int64 conversation_id = 2;
  int64 last_msg_id = 3;
}

message MarkMessagesReadResp {
  Metadata meta = 1;
}


// 未读数
message GetUnreadCountReq {
  int64 user_id = 1;
}

message GetUnreadCountResp {
  int64 total_unread = 1;
  map<int64, int64> conv_unread = 2; // conversation_id -> unread
  Metadata meta = 3;
}


// 会话列表（核心）
message ListConversationsReq {
  int64 user_id = 1;
  PageStatsReq page_stats = 2;
}

message ListConversationsResp {
  repeated ConversationView conversations = 1;
  Metadata meta = 2;
  PageStatsResp page_stats = 3;
}


// 删除会话
message DeleteConversationReq {
  int64 user_id = 1;
  int64 conversation_id = 2;
}

message DeleteConversationResp {
  Metadata meta = 1;
}


// 获取会话
message GetConversationReq {
  int64 user_id = 1;
  int64 target_id = 2;
  ConversationType conv_type = 3;
}

message GetConversationResp {
  Conversation conversation = 1;
  Metadata meta = 2;
}


// 清空消息
message ClearMessagesReq {
  int64 user_id = 1;
  int64 conversation_id = 2;
}

message ClearMessagesResp {
  Metadata meta = 1;
}

message UpdateMessageStatusReq {
  int64 message_id = 1;
  MessageStatus status = 2;
  int64 operator_id = 3; // 操作者ID
}

message UpdateMessageStatusResp {
  Metadata meta = 1;
}

message GetMessageReq {
  int64 message_id = 1;
}

message GetMessageResp {
  Message message = 1;
  Metadata meta = 2;
}

message CreateConversationReq {
  int64 user_id = 1;
  int64 target_id = 2;
  ConversationType conv_type = 3;
  string initial_message = 4;
}

message CreateConversationResp {
  int64 conversation_id = 1;
  Metadata meta = 2;
}

